--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>challenge</title>
-    <link rel="stylesheet" href="stayle.css">
-
+    <title>Document</title>
 </head>
 <body>
-    
+    <h2>
+ abdalluh jber
+    </h2>
 </body>
 </html>
