--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product Card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>
- abdalluh jber
-    </h2>
+    <div class="product-card">
+        <div class="image">
+            <img src="img1.jpg" alt="Gabrielle Essence Perfume" >
+        </div>
+        <div class="info-section">
+            <span class="category">PERFUME</span>
+            <h2 class="product-title">Gabrielle</br> Essence Eau De Parfum</h2>
+            <p class="product-description">
+                A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+                Perfumer-Creator for the House of CHANEL.
+            </p>
+            <div class="price-section">
+                <span class="current-price">$149.99</span>
+                <span class="old-price">$169.99</span>
+            </div>
+            <button class="add-to-cart"> <span class="cart">&#128722;</span> Add to Cart</button>
+        </div>
+    </div>
 </body>
 </html>
